# stm32f3-template

./: Cargo.toml  README.md  openocd.gdb
src/: main.rs
