[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = {git="https://github.com/Drodofsky/gpio.git", branch="main"}
cortex-m-rt = "0.6.3"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"